tests/ui/traits/issue-38404.stderr
error[E0038]: the trait `B` cannot be made into an object
  --> $DIR/issue-38404.rs:3:15
   |
LL | trait C<T>: A<dyn B<T, Output=usize>> {}
   |               ^^^^^^^^^^^^^^^^^^^^^^ `B` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-38404.rs:1:13
   |
LL | trait A<T>: std::ops::Add<Self> + Sized {}
   |             ^^^^^^^^^^^^^^^^^^^ ...because it uses `Self` as a type parameter
LL | trait B<T>: A<T> {}
   |       - this trait cannot be made into an object...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
